I added some amazing stuff

--- a/main.kv
+++ b/main.kv
@@ -10,11 +10,51 @@ ScreenManager:
         id:homes
         MDTopAppBar:
             title: "Home"
-            elevation:2
+#            elevation:2
             pos_hint: {"top": 1}
             md_bg_color: 53 / 225, 59 / 225, 60 / 225, 1
             specific_text_color: "#C6C7C4"
-        Admin:
+        Ceremony:
+
+    MDScreen:
+        name:"guest_report"
+        md_bg_color: 53 / 225, 59 / 225, 60 / 225, 1
+        FloatLayout:
+            MDCard:
+                radius:20
+                elevation:10
+                size_hint:None, None
+                shadow_softness:2
+                size:app.size_x/1.5,app.size_y/1.9
+                md_bg_color:"#C6C7C4"
+                adaptive_height:True
+                style:"outlined"
+                adaptive_width:True
+                pos_hint:{'center_x':.5, 'center_y':.5}
+                orientation:"vertical"
+                spacing:"10sp"
+                FloatLayout:
+                    MDLabel:
+                        text:"Name:"+" "+app.guest_name_r
+                        halign:"left"
+                        theme_text_color: "Secondary"
+                        font_size:"18sp"
+                        size_hint_y: None
+                        pos_hint:{'center_x':.6, 'center_y':.7}
+                    MDLabel:
+                        text:"Phone:"+" "+app.guest_phone
+                        halign:"left"
+                        theme_text_color: "Secondary"
+                        font_size:"18sp"
+                        size_hint_y: None
+                        pos_hint:{'center_x':.6, 'center_y':.6}
+                    MDLabel:
+                        text:"Attend Time:"+" "+app.attend_time
+                        halign:"left"
+                        theme_text_color: "Secondary"
+                        font_size:"18sp"
+                        size_hint_y: None
+                        pos_hint:{'center_x':.6, 'center_y':.5}
 
     MDScreen:
         name:'ceremony'
@@ -23,7 +63,6 @@ ScreenManager:
             orientation: 'vertical'
             spacing: dp(10)
             padding: dp(20)
-
             MDTopAppBar:
                 title: "Create ceremony"
                 elevation:2
@@ -71,6 +110,7 @@ ScreenManager:
                 halign:"left"
                 theme_text_color: "Secondary"
                 font_name:'components/fonts/Gill Sans.otf'
+
             NumberOnlyField:
                 id:guest_number
                 mode: "rectangle"
@@ -82,7 +122,18 @@ ScreenManager:
                 text_color_focus: 53 / 225, 59 / 225, 60 / 225, 1
                 font_size: dp(18)
                 halign: 'left'
+            MDChip:
+                on_release:
+                    app.toggle_double(self)
+                type:"filter"
+                id:isDouble
+                md_bg_color:"#303A29"
+                MDChipText:
+                    text: "Double"
 
+#                text:"HEllo"
+#                text_color: "white"
+#                md_bg_color: 53 / 225, 59 / 225, 60 / 225, 1
             MDRaisedButton:
                 text:"Submit"
                 md_bg_color:  53 / 225, 59 / 225, 60 / 225, 1
@@ -90,8 +141,8 @@ ScreenManager:
                 font_name:'components/fonts/Gill Sans.otf'
                 on_release:
                     print("submit")
-                    app.get_guest( guest_number.text, guest_name.text, ceremony_name.text)
-
+                    app.get_guest( guest_number.text, guest_name.text, ceremony_name.text, isDouble.active)
+                    app.add_attender_opt()
             MDLabel:
                 text: "Please fill in all the details"
                 theme_text_color: "Hint"
@@ -141,6 +192,7 @@ ScreenManager:
                 on_release:
                     print("Ma")
                     app.screen_capture("Confirm")
+                    app.get_data()
 
     MDScreen:
         name:"Confirm"
@@ -207,29 +259,188 @@ ScreenManager:
             padding: dp(20)
             MDTopAppBar:
                 title: "Report"
+                elevation:1
+                md_bg_color: 53 / 225, 59 / 225, 60 / 225, 1
+                specific_text_color: "#C6C7C4"
+            MDBoxLayout:
+                orientation:"vertical"
+                MDFloatLayout:
+                    Carry:
+                        pos_hint:{"center_x":.5, "center_y":.77}
+                        MDFloatLayout:
+                            MDLabel:
+                                text:"Attendance"
+                                halign:"center"
+                                color:"white"
+                                pos_hint:{"center_x":.15, "center_y":.82}
+                            MDLabel:
+                                text:app.total_guest
+                                halign:"left"
+                                color:"white"
+                                font_size:"30sp"
+                                pos_hint:{"center_x":.6, "center_y":.5}
+                            MDLabel:
+                                text:"Confirmed Attendance"
+                                halign:"center"
+                                color:"white"
+                                pos_hint:{"center_x":.6, "center_y":.82}
+                            MDLabel:
+                                text:app.total_confirmed
+                                halign:"left"
+                                color:"white"
+                                font_size:"30sp"
+                                pos_hint:{"center_x":.9, "center_y":.5}
+
+                    Display:
+                        name:"Yet to attend"
+                        number:str(int(app.total_guest) - int(app.total_attended))
+                        posx:.45
+                        pos_hint:{"center_x":.27, "center_y":.46}
+
+                    Display:
+                        name:"Attended"
+                        number:app.total_attended
+                        pos_hint:{"center_x":.72, "center_y":.46}
+
+                    MDLabel:
+                        text:"Quick Actions"
+                        color:"#474747"
+                        font_size:"18sp"
+                        halign:"center"
+                        pos_hint:{"center_x":.22, "center_y":.32}
+
+                    MDFloatingActionButton:
+                        icon: "account-group"
+                        type:"standard"
+                        md_bg_color:"#2e4052"
+                        text_color:"#BCDCDC"
+                        pos_hint:{"center_x":.2, "center_y":.26-.02}
+                        on_release:
+                            app.data_getter = 'all_guests'
+                            app.screen_capture("data_screen")
+                            app.title_data = "All Guest"
+                            app.load_contacts_to_ui()
+
+                    MDLabel:
+                        text:"All Guest"
+                        color:"#474747"
+                        font_size:"12sp"
+                        halign:"center"
+                        pos_hint:{"center_x":.2, "center_y":.19-.02}
+
+                    MDFloatingActionButton:
+                        icon: "account-arrow-down"
+                        type:"standard"
+                        md_bg_color:"#2e4052"
+                        text_color:"#BCDCDC"
+                        pos_hint:{"center_x":.4+.05, "center_y":.26-.02}
+                        on_release:
+                            app.data_getter = 'attended_guests'
+                            app.screen_capture("data_screen")
+                            app.title_data = "Attended Guest"
+                            app.load_contacts_to_ui()
+
+                    MDLabel:
+                        text:"Attended"
+                        color:"#474747"
+                        font_size:"12sp"
+                        halign:"center"
+                        pos_hint:{"center_x":.4+.05, "center_y":.19-.02}
+
+                    MDFloatingActionButton:
+                        icon: "account-alert"
+                        type:"standard"
+                        md_bg_color:"#2e4052"
+                        text_color:"#BCDCDC"
+                        pos_hint:{"center_x":.6+.1, "center_y":.26-.02}
+                        on_release:
+                            app.data_getter = 'not_attended'
+                            app.screen_capture("data_screen")
+                            app.title_data = "Not Attended"
+                            app.load_contacts_to_ui()
+                    MDLabel:
+                        text:"Not attended"
+                        color:"#474747"
+                        font_size:"12sp"
+                        halign:"center"
+                        pos_hint:{"center_x":.6+.1, "center_y":.19-.02}
+
+                    MDFloatingActionButton:
+                        icon: "account-check"
+                        type:"standard"
+                        md_bg_color:"#2e4052"
+                        text_color:"#BCDCDC"
+                        pos_hint:{"center_x":.32, "center_y":.1}
+                        on_release:
+                            app.data_getter = 'confirmed_guest'
+                            app.screen_capture("data_screen")
+                            app.title_data = "Confirmed Guest"
+                            app.load_contacts_to_ui()
+
+                    MDLabel:
+                        text:"Confirmed"
+                        font_size:"12sp"
+                        halign:"center"
+                        pos_hint:{"center_x":.32, "center_y":.04}
+
+                    MDFloatingActionButton:
+                        icon: "account-cancel"
+                        type:"standard"
+                        md_bg_color:"#2e4052"
+                        text_color:"#BCDCDC"
+                        pos_hint:{"center_x":.6, "center_y":.1}
+                        on_release:
+                            app.data_getter = 'not_confirmed_guest'
+                            app.screen_capture("data_screen")
+                            app.title_data = "Not Confirmed"
+                            app.load_contacts_to_ui()
+
+                    MDLabel:
+                        text:"Not Confirmed"
+                        font_size:"12sp"
+                        halign:"center"
+                        pos_hint:{"center_x":.6, "center_y":.04}
+
+    MDScreen:
+        name:"not_attended"
+        MDBoxLayout:
+            MDTopAppBar:
+                title: "Not Attended"
                 elevation:2
                 md_bg_color: 53 / 225, 59 / 225, 60 / 225, 1
                 specific_text_color: "#C6C7C4"
-            MDCard:
-                orientation: "horizontal"
-                padding: "8dp"
-                radius: [25,]
-                elevation:2
-                md_bg_color: [0.7, 0.7, 0.7, 1]  # Blue color for total guests
-                MDLabel:
-                    text: "Total Guests: "+app.total_guest
-                    halign: "center"
-                MDLabel:
-                    text: "Attended Guests: "+app.total_attended
-                    halign: "center"
-            MDLabel:
-                text: "Yet to attend"
-                halign: "center"
-                size_hint_y: None
-                height: self.texture_size[1]
             ScrollView:
                 MDList:
                     id: report_list
+    MDScreen:
+        name:"data_screen"
+        MDBoxLayout:
+            orientation:"vertical"
+            MDTopAppBar:
+                title: app.title_data
+                elevation:2
+                md_bg_color: 53 / 225, 59 / 225, 60 / 225, 1
+                specific_text_color: "#C6C7C4"
+            MDTextField:
+                id:guest_search
+                hint_text: "Search Guest"
+                mode: "round"
+                helper_text: "Massage"
+                on_text:
+                    app.search_data(guest_search.text)
+            RecycleView:
+                id:guests
+                key_viewclass: 'viewclass'
+                key_size: 'height'
+                RecycleBoxLayout:
+                    id:wali
+                    spacing:dp(10)
+                    padding: dp(10)
+                    default_size: None, dp(70)
+                    default_size_hint: 1, None
+                    size_hint_y: None
+                    height: self.minimum_height
+                    orientation:"vertical"
     MDScreen:
         name: "story"
         on_enter:
@@ -326,7 +537,7 @@ ScreenManager:
         adaptive_width:True
         pos_hint:{'center_x':.5, 'center_y':.4}
         on_release:
-            app.screen_capture("story")
+            app.screen_capture("ceremony")
         FloatLayout:
             MDIcon:
                 icon:"account-multiple-plus-outline"
@@ -367,3 +578,57 @@ ScreenManager:
                 theme_text_color:"Custom"
                 pos_hint: {"center_x": .5, "center_y": .15}
                 font_name:'components/fonts/Gill Sans.otf'
+<Display@MDBoxLayout>:
+	md_bg_color:"#BCDCDC"
+	orientation:"vertical"
+	radius:dp(20)
+	#adaptive_height:True
+	size_hint:None, None
+	size:app.size_x/2.9,app.size_y/6
+	posx:.4
+	name:""
+	number:""
+	FloatLayout:
+		MDLabel:
+			text:root.name
+			halign:"center"
+			font_size:"17sp"
+			color:"#2e4052"
+			pos_hint:{'center_x':root.posx, 'center_y':.75}
+		MDLabel:
+			text:root.number
+			halign:"left"
+			color:"#2e4052"
+			font_size:"30sp"
+			pos_hint:{'center_x':.9, 'center_y':.4}
+
+<Carry@MDCard>:
+	md_bg_color:"#2e4052"
+	orientation:"vertical"
+	radius:dp(28)
+	adaptive_height:True
+#	height:"1"
+	size_hint:None, None
+	size:app.size_x/1.2,app.size_y/4
+
+<Contacts>:
+	text: root.name
+    secondary_text: "Whatsapp status:"+" "+root.whatsapp_status
+    tertiary_text: "Normal sms:"+" "+root.normal_status
+	font_name:'components/fonts/Gill Sans.otf'
+	style:"elevated"
+	elevation:3
+	on_release:
+	    print(root.phone)
+	    app.guest_report(root.phone)
+	    app.screen_capture('guest_report')
+	ImageLeftWidget:
+	    source:root.image
+	    radius: [dp(50), dp(50), dp(50), dp(50)]
+	    on_release:
+            print(root.phone)
+    CallContainer:
+        MDIconButton:
+            icon: "phone"
+            on_release:
+                app.call(root.phone)
